@@ -1,3 +1,4 @@
+* Fix plot's ability to rescale auto-scaled scales.
 * Add ability for Sankey to limit the number of nodes or links rendered.
 * Polish how trailing links to unrendered nodes are drawn.
 * Performance optimization for animating stacked area charts using a legend.
